--- a/table.html
+++ b/table.html
@@ -6,11 +6,28 @@
     <title>table</title>
 </head>
 <body>
-    <table border='1'>
+    <h3>country and ceo name</h3>
+    <p>country and ceo name of famous mobile industry</p>
+    <table border="1">
         <tr>
-            <td>country</td>
-            <td>state</td>
-            <td>city</td>
+            <td>Company</td>
+            <td>CEO</td>
+            <td>Country</td>
+        </tr>
+        <tr>
+            <td>Motorola</td>
+            <td>Sanjay jha</td>
+            <td>America</td>
+        </tr>
+        <tr>
+            <td>Vivo</td>
+            <td>Shen Wei</td>
+            <td>China</td>
+        </tr>
+        <tr>
+            <td>Samsung</td>
+            <td>jon young-hyun and han jong-hee</td>
+            <td>South korea</td>
         </tr>
     </table>
 </body>
