--- a/table.html
+++ b/table.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widt h=device-width, initial-scale=1.0">
     <title>table</title>
 </head>
 <body>
     <h3>country and ceo name</h3>
     <p>country and ceo name of famous mobile industry</p>
-    <table border="1">
+    <table  border="1">
         <tr>
-            <td>Company</td>
-            <td>CEO</td>
-            <td>Country</td>
+            <th>Company</th>
+            <th>CEO</th>
+            <th>Country</th>
         </tr>
         <tr>
             <td>Motorola</td>
